overflow fix

--- a/src/container/App.css
+++ b/src/container/App.css
@@ -1,8 +1,8 @@
 body {
   background-color: white;
-
+  box-sizing: border-box;
   overflow: hidden;
-  /* height: 100vh; */
+  height: 100%;
   /* margin: 0;
   padding: 0;
   overflow: hidden; */
